Jobs are working

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.9.0",
     "bullmq": "^5.53.3",
+    "class-validator": "^0.14.2",
     "handlebars": "^4.7.8",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
