--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
@@ -34,6 +35,8 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
