--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^6.0.0",
     "bullmq": "^5.53.3",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
