--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.53.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
