--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "handlebars": "^4.7.8",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
